--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "@popperjs/core": "^2.11.6",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
-    "pretty-bytes": "^6.0.0"
-  },
-  "devDependencies": {
+    "pretty-bytes": "^6.0.0",
     "snowpack": "^3.8.8"
   }
 }
